public/css/hivesuggested.css
/* Shared Task Page */

.title {
    font-family: 'Open Sans';
    font-size: 17px;
}

.course {
    font-family: 'Open Sans';
    font-size: 14px;
    display: inline;
}

.date {
    float: right;
    font-size: 18px;
    font-family: 'Open Sans';
}

.endorsed {
    font-family: 'open sans';
    font-size: 12px;
}

.action-buttons {
    margin: 0 auto;
    left: 50%;
    width: 200px;
}

.button-clear {
    font-size: 20px;
    font-family: 'Open Sans';
    padding-right: 25px;
}


/* Main Task Page */


.task-title {
    font-size:14px;
    display: inline;
    padding-right: 10px;
}

.tasks {
    padding-top:5px;
    margin-top: -3px;
    margin-right: 0px;
    width:94%;
}

.course-title {
    font-size:13px;
    font-family: 'Open Sans'
}

.date-title {
    float: right;
    display: inline;
    font-size: 15px; 
}

.item {
	font-family: 'Open Sans';
}

.detail-header {
    font-size: 14px;
}

.detail {
    font-size: 12px;
}



/* Add Task Page */

input[type="text"], textarea {
    font-family: 'Open Sans';
}


input[type="time"] {
    font-family: 'Open Sans';
    font-size: 16px;
    font-color: #444;
    float: right;
}

.time {
	display: inline;
	position: relative;
	width: 40px;
    color: #444;
}

.date {
	display: inline;
    color: #444;
}

.due-date {
    font-size: 16px;
    font-family: 'Open Sans';   
    color: #444;
}

#due_date {
    text-align: right;
}

#due_time {
    text-align: right;
}

.class {
    font-size: 16px;
    font-family: 'Open Sans';
}

.event-details {
	padding-bottom: 20px;
}

.event-actions {
	padding-bottom: 10px;
}

.item-checkbox .checkbox {
position: absolute;
top: 35%;
right: 8px;
left: 8px;
z-index: 3;
margin-top: -21px;
}

/* Tasks Details */

.endorsed {
     float: left;
    display: inline;
    font-size: 15px; 
}

.delete {
     float: right;
    display: inline;
    font-size: 17px; 
}

.task-detail-title {
    font-size:17px;
    display: inline;
    padding-right: 10px;
}

.task-detail-date {
    font-size:14px;
    padding-right: 10px;
    padding-top: 5px;
}

.task-detail-class {
    font-size:15px;
    padding-right: 10px; 
}

